still trying to fix vh issues on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   transform: translate(-50%, -50%);
   display: flex;
   width: 85vw;
-  height: min(90vh, 90dvh);
+  height: 90svh;
   background-color: rgba(30, 44, 70, 0.75);
   backdrop-filter: blur(19px) saturate(180%);
   border-radius: 12px;
@@ -73,8 +73,8 @@ body {
     display: none;
   }
 } */
-@media only screen and (max-width: 1023px) {
+/* @media only screen and (max-width: 1023px) {
   .container {
     display: none;
   }
-}
+} */
